welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:9: error: not found: value LeveBrosse
      LeveBrosse()
      ^