welcome.lessons.welcome.methods.slug.SlugHunting.scala.code
def hunt() {
  while(estSurBiscuit()==false)
  {
    if(isFacingTrail())
    {
      avance()
      baisseBrosse()
      LeveBrosse()
    }else
    {
      gauche();
    }
  }
  prendBiscuit()
}

def isFacingTrail():Boolean = {
    if(estFaceMur())return false;
  	avance()
  	if(getCouleurSol()==Color.green)
  	{
      recule()
      return true
    }
  	recule()
  	return false
}